ingress-controller.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-controller
  namespace: ingress-nginx
  labels:
    app: ingress-controller
spec:
  rules:
    - host: jenkins.local
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port: 
                number: 8080
