jenkins-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jenkins-ingress
  namespace: jenkins
  labels:
    app: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port:
                number: 8080
